--- a/src/stories/02_MapTechnology.mdx
+++ b/src/stories/02_MapTechnology.mdx
@@ -3,43 +3,83 @@ import { Meta } from '@storybook/blocks'
 
 <Meta title="Learning/02_Map技術基礎" />
 
-# Map技術基礎
+# Map技術の理論的基礎
 
-ウェブ地図システムの基本原理。
+現代のウェブ地図システムの背後にある数学的モデルとデータ構造について解説します。
 
-## 1. ウェブ地図の基本
+## 1. 空間参照系と投影法
 
-ウェブ地図は**タイル**と呼ばれる正方形の画像をつなぎ合わせて表示します。
+地球という3次元の球体（厳密には回転楕円体）を2次元の平面スクリーンにマッピングするための理論的枠組みです。
 
-## 2. ラスタタイル vs ベクタタイル
+### Web Mercator 投影 (EPSG:3857)
 
-### ラスタタイル
-- JPEG/PNG形式
-- 高速に表示
-- スタイル変更不可
+Google Maps等の主要なウェブ地図サービスで採用されているデファクトスタンダードです。正角円筒図法の一種であり、以下の特徴を持ちます。
+- **等角生 (Conformality)**: 局所的な角度が保存されるため、建物の形状などが歪みません。
+- **正方形への写像**: 世界全体（緯度約±85.05度まで）を正方形の平面に投影します。計算機上でのタイル管理に適しています。
 
-### ベクタタイル
-- GeoJSON形式
-- スタイル変更可能
-- インタラクション豊富
+#### 数学的定義
 
-## 3. タイル座標系（XYZ）
+経度 $\lambda$、緯度 $\phi$ から平面座標 $(x, y)$ への変換式：
 
-```
-Z = ズームレベル
-X = 経度方向インデックス
-Y = 緯度方向インデックス
+```latex
+x = R \lambda
+y = R \ln \tan \left( \frac{\pi}{4} + \frac{\phi}{2} \right)
 ```
 
-## 4. MapLibre GLの基本
+ここで $R$ は地球の半径（通常 6,378,137m）です。
+
+## 2. タイルピラミッドと四分木 (Quadtree)
+
+ウェブ地図は、巨大な全体画像を小さな正方形の「タイル」に分割し、ズームレベルに応じて解像度を切り替える **LOD (Level of Detail)** 技術を採用しています。このデータ構造は **四分木 (Quadtree)** としてモデル化されます。
+
+### データ構造
+
+- **ルートノード ($Z=0$)**: 世界全体を1枚のタイルで表現。
+- **子ノード**: ズームレベルが1上がるごとに、各タイルは4つの子タイル（左上、右上、左下、右下）に分割されます。
+
+任意のズームレベル $Z$ における総タイル数 $N$ は：
+
+$$ N = 4^Z $$
+
+### 離散空間アドレッシング (XYZスキーム)
+
+各タイルは $(Z, X, Y)$ の3つ組で一意に特定されます。
+
+- **Z (Zoom)**: 詳細度。
+- **X (Column)**: 経度方向のインデックス ($0 \le X < 2^Z$)。
+- **Y (Row)**: 緯度方向のインデックス ($0 \le Y < 2^Z$)。
+
+## 3. レンダリング技術：ラスタ vs ベクタ
+
+### ラスタ化パイプライン (Server-side Rasterization)
+
+サーバー側でジオメトリを画像（PNG/JPEG）にレンダリングし、クライアントは画像を並べるだけの方式です。
+- **長所**: クライアントの負荷が低い。
+- **短所**: インタラクションが限定的、フォントの滲み。
+
+### ベクタタイル (Client-side Rendering)
+
+ジオメトリデータ（点、線、面）を構造化データとしてクライアントに送信し、クライアント側 (WebGL/WebGPU) で描画します。
+
+#### Protocol Buffers (PBF/MVT)
+
+効率的な転送のために、**Protocol Buffers** を用いたバイナリ形式（Mapbox Vector Tile - MVT）が標準的に使用されます。
+- **ジグザグ符号化 (ZigZag Encoding)**: 座標値の差分（Delta）を効率的に圧縮。
+- **クリッピング**: タイル境界を超えるジオメトリの適切な切断処理。
+
+## 4. MapLibre GL のアーキテクチャ
+
+MapLibre GL JS は、WebGLを利用したベクタタイルレンダリングエンジンです。
 
 ```typescript
 import maplibregl from 'maplibre-gl'
 
+// Mapインスタンスはレンダリングループとイベントシステムを管理する
 const map = new maplibregl.Map({
-  container: 'map',
-  center: [139.69, 35.69],
-  zoom: 12
+  container: 'map', // DOM要素のコンテナ
+  center: [139.69, 35.69], // 初期視点（経緯度）
+  zoom: 12, // 初期ズームレベル
+  style: 'path/to/style.json' // スタイル仕様書（レイヤー定義）
 })
 ```
 
